--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.11.0",
     "glob": "~4.3.1",
     "jade": "~1.9.1",
+    "mailgun-js": "^0.7.10",
     "mandrill": "^0.1.0",
     "mandrill-api": "^1.0.41",
     "method-override": "~2.3.0",
