--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "method-override": "~2.3.0",
     "mongoose": "~3.8.20",
     "morgan": "~1.5.0",
+    "mustache": "^2.2.1",
     "serve-favicon": "~2.2.0",
     "underscore": "^1.7.0"
   },
